[tool.poetry]
name = "olamaps"
version = "0.5.2"
description = "Python client library for Ola Maps API Web Services"
license = "MIT"
authors = ["adayush <adayush0@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/adayush/olamaps-python"
repository = "https://github.com/adayush/olamaps-python"
keywords = ["ola", "maps"]


[tool.poetry.urls]
Issues = "https://github.com/adayush/olamaps-python/issues"


[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
python-dotenv = "^1.0.1"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
